import configureMockStore from 'redux-mock-store';
import thunk from 'redux-thunk';

import {initialState} from './reducer';
import * as actions from './actions';

const middlewares = [thunk];
const mockStore = configureMockStore(middlewares);

let mockSpark, store;

describe('redux-module-mercury actions ', () => {
  beforeEach(() => {
    store = mockStore(initialState);

    mockSpark = {
      canAuthorize: true,
      listenToAndRun: jest.fn((mercury, eventName, callback) => ({mercury, eventName, callback})),
      internal: {
        mercury: {
          connect: jest.fn(() => Promise.resolve()),
          connected: false,
          connecting: false
        },
        device: {
          registered: true
        }
      }
    };
  });

  it('has exported actions', () => {
    expect(actions.connectToMercury).toBeDefined();
  });


  describe('#connectToMercury', () => {
    it('can successfully connect to Mercury', () => {
      store.dispatch(actions.connectToMercury(mockSpark))
        .then(() => {
          expect(mockSpark.listenToAndRun.mock.calls[0][1]).toBe('change:connected');
          expect(store.getActions()).toMatchSnapshot();
        });
    });

    it('fails to connect if device is not registered', () => {
      mockSpark.internal.device.registered = false;
      store.dispatch(actions.connectToMercury(mockSpark))
        .then(() => {
          expect(store.getActions()).toMatchSnapshot();
        });
    });

    it('does not connect if already connected', () => {
      mockSpark.internal.mercury.connected = true;
      store.dispatch(actions.connectToMercury(mockSpark));
      expect(store.getActions()).toMatchSnapshot();
    });
  });
});
