// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux-module-mercury actions  #connectToMercury can successfully connect to Mercury 1`] = `
Array [
  Object {
    "payload": true,
    "type": "mercury/SET_CONNECTING",
  },
]
`;

exports[`redux-module-mercury actions  #connectToMercury does not connect if already connected 1`] = `
Array [
  Object {
    "payload": true,
    "type": "mercury/SET_CONNECTED",
  },
]
`;

exports[`redux-module-mercury actions  #connectToMercury fails to connect if device is not registered 1`] = `Array []`;
